--- a/pom.xml
+++ b/pom.xml
@@ -82,11 +82,7 @@
 			<artifactId>spring-orm</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.6</version>
-		</dependency>
+
 
 		<!-- Roo dependencies -->
 		<dependency>
@@ -96,12 +92,7 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<!-- AspectJ -->
-		<dependency>
-			<groupId>org.aspectj</groupId>
-			<artifactId>aspectjrt</artifactId>
-			<version>${org.aspectj-version}</version>
-		</dependency>
+
 
 		<!-- Logging -->
 		<dependency>
@@ -179,6 +170,12 @@
 			<version>4.7</version>
 			<scope>test</scope>
 		</dependency>
+        <!-- Postgresql -->
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.1-901-1.jdbc4</version>
+        </dependency>
 
 	</dependencies>
 	<repositories>
