--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,13 @@
 			<version>1.2</version>
 		</dependency>
 
+        <!-- JSON -->
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.5.3</version>
+        </dependency>
+
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -174,8 +181,8 @@
             <artifactId>postgresql</artifactId>
             <version>9.1-901-1.jdbc4</version>
         </dependency>
-
 	</dependencies>
+
 	<repositories>
 		<!-- For testing against latest Spring snapshots -->
 		<repository>
