Добавлена страница гида

--- a/src/main/webapp/WEB-INF/hibernate.properties
+++ b/src/main/webapp/WEB-INF/hibernate.properties
@@ -1,8 +1,8 @@
 # jdbc connecition
 hibernate.connection.driver_class = org.postgresql.Driver
 hibernate.connection.url = jdbc:postgresql://localhost:5432/excursions
-hibernate.connection.username = postgres
-hibernate.connection.password = lokomotiv
+hibernate.connection.username = user_db1
+hibernate.connection.password = qpwoeiruty
 
 # dialect
 hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
