--- a/src/main/webapp/WEB-INF/jdbc.properties
+++ b/src/main/webapp/WEB-INF/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName= org.postgresql.Driver
 jdbc.dialect=org.hibernate.dialect.PostgreSQLDialect
 jdbc.databaseurl=jdbc:postgresql://localhost:5432/excursions
-jdbc.username=postgres
-jdbc.password=lokomotiv
+jdbc.username=user_db1
+jdbc.password=qpwoeiruty
