--- a/src/main/webapp/WEB-INF/hibernate.properties
+++ b/src/main/webapp/WEB-INF/hibernate.properties
@@ -2,7 +2,7 @@
 hibernate.connection.driver_class = org.postgresql.Driver
 hibernate.connection.url = jdbc:postgresql://localhost:5432/excursions
 hibernate.connection.username = postgres
-hibernate.connection.password = lokomotiv
+hibernate.connection.password = 123
 
 # dialect
 hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
